fix(wishlist): make drawer content clickable (z-index overlay/panel)

--- a/assets/component-cart-drawer.css
+++ b/assets/component-cart-drawer.css
@@ -153,6 +153,7 @@ cart-drawer {
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 1;
 }
 
 .cart-drawer__overlay:empty {
@@ -226,6 +227,8 @@ body.wishlist-open .drawer {
   width: min(38rem, calc(100vw - 3rem));
   max-width: min(38rem, calc(100vw - 3rem));
   /* Keep theme gradient from markup; no solid override here */
+  position: relative;
+  z-index: 2;
 }
 
 @media screen and (min-width: 990px) {
